# speats-agent

./: .gitignore  ARCHITECTURE.md  DASHBOARD.md  README.md  ROADMAP.md  TEMPLATES.md
dashboard/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
dashboard/backend/: .env.example  alembic.ini  pyproject.toml
dashboard/backend/app/: __init__.py  auth.py  config.py  database.py  hermes.py  main.py  models.py  schemas.py
dashboard/backend/migrations/: env.py
dashboard/backend/migrations/versions/: be5d5ad1093c_initial_dashboard_schema.py
dashboard/backend/tests/: test_hermes.py
dashboard/src/: App.css  App.tsx  index.css  main.tsx
dashboard/src/components/: AgentCard.tsx  AppShell.tsx  EmptyState.tsx  LogStream.tsx
dashboard/src/lib/: api.ts  demoData.ts  format.ts  types.ts
dashboard/src/pages/: AgentDetailPage.tsx  CreateAgentPage.tsx  DashboardPage.tsx  LogsPage.tsx  TemplatesPage.tsx
scripts/: create-agent.sh  health-check.sh  setup.sh  update-templates.sh
templates/farmacia/: README.md  SOUL.md  cron.md  onboarding.md  skills.md  template.config.yaml
templates/ristorante/: SOUL.md  cron.md  onboarding.md  template.config.yaml
